--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -253,6 +253,7 @@ body {
   font-size: 1.125rem;
   font-weight: 300;
   color: #9698a6;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
@@ -486,6 +487,7 @@ button:hover, .button:hover {
   margin-top: 1.5rem;
   padding: 1.625rem;
   border-radius: 5px;
+  z-index: 1;
 }
 
 .header__menu a {
